fixed splash content being too low on page

--- a/react-app/src/components/Homepage/homepage.css
+++ b/react-app/src/components/Homepage/homepage.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Marck+Script&display=swap');
 
+.homepage-container {
+    position: relative;
+    bottom: 80px;
+}
+
 .header {
     width: 800px;
     height: 415px;
